fix some padding issues on mobile and improve instructions on exercise page.

--- a/style.css
+++ b/style.css
@@ -1018,9 +1018,15 @@ input.form-control:focus,
 */
 
 .exercise-squeeze {
-  max-width: 50vw;
   margin: auto;
-  padding: 5rem 0;
+  padding: 1rem .25rem;
+}
+
+@media (min-width: 766px) {
+  .exercise-squeeze {
+    max-width: 50vw;
+    padding: 5rem 0;
+  }
 }
 
 .exercise-squeeze .loading {
